* don't force page break after TOC with automatic placement in article if `title-page` attribute is set and value of `toc-break-after` theme key is `auto` (#1768)

Improvements::

* include source location in warning message for truncated table cell if sourcemap is enabled (#2261)

Bug Fixes::

* allow alt text for block image, video, and audio to wrap to next line on same page (#2258)
* make URL check more strict so image target containing a colon is not mistaken as a URL

== 2.1.3 (2022-06-23) - @mojavelinux

Bug Fixes::

* interpret `start-at` theme keys with value `1` correctly (as `1` instead of `2`) (#2255)
* restore column layout after importing page(s) from PDF (#2253)
* fix crash when border color is transparent (`thematic-break-border-color`, `admonition-column-rule`, `quote-border-color`, `verse-border-color`)
* ensure page margin is restored after imported page

=== Details

{url-repo}/releases/tag/v2.1.3[git tag] | {url-repo}/compare/v2.1.2\...v2.1.3[full diff]

== 2.1.2 (2022-06-17) - @mojavelinux

Bug Fixes::

* apply page layout from main document to new page in scratch document (#2248)
* use correct logic to insert page before TOC with automatic placement when doctype=book and media=prepress
* use `get_entries_for_toc` to determine if the TOC is non-empty rather than `Document#sections?`

=== Details

{url-repo}/releases/tag/v2.1.2[git tag] | {url-repo}/compare/v2.1.1\...v2.1.2[full diff]

== 2.1.1 (2022-06-15) - @mojavelinux

Improvements::

* store zero-based column on Extent for extensions to use to position cursor at start of extent

Bug Fixes::

* place block image in SVG format in correct column when align is left and page columns are enabled (#2241)
* accurately trap LoadError from CodeRay if source language is not recognized on code block
* only draw rounded rectangle around phrase if `border-radius` is > 0
* use `base-border-color` value if border width is set on role for inline phrase but not border color

=== Details
